--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ body {
   color: hsl(220, 5%, 49%);
   font-size: 1.6rem;
   line-height: 1.8;
-  height: 300vh;
+  /* height: 300vh; */
 }
 
 a,
@@ -123,18 +123,22 @@ h3 {
   font-weight: 700;
   padding: 10px 30px;
   border-radius: 5px;
-  transition: 0.25s ease;
+  transition: 0.25s ease-in;
 }
 
 .btn-primary {
-  background: #e3e553;
-  background: linear-gradient(135deg, #e3e553, #e2d922);
+  /* background: #e3e553; */
+  background-image: linear-gradient(135deg, #e3e553, #e2d922);
   background-size: 100%;
 }
 
 .btn-primary:hover,
 .btn-primary:focus {
   background-position: bottom right;
+  background-image: none;
+  background-color: mediumseagreen;
+  color: white;
+  transition: 1.2s ease;
 }
 
 .btn-secondary {
@@ -146,11 +150,6 @@ h3 {
 .btn-secondary:focus {
   color: #000;
   background-color: #fff;
-}
-
-.btn-primary:hover,
-.btn-primary:focus {
-  background-position: bottom right;
 }
 
 .header {
@@ -293,6 +292,10 @@ h3 {
   width: 100%;
 }
 
+.hero-banner img {
+  /* transform: rotateY(180deg); */
+}
+
 /* grid styling */
 
 .grid-list {
@@ -318,12 +321,13 @@ h3 {
   border-radius: 6px;
   text-align: center;
   box-shadow: 0 6px 24px #ccc;
-  transition: 0.25 ease;
+  transition: all 0.2s ease-out;
 }
 
 .service-card:hover,
 .service-card:focus {
-  transform: translateY(-10px);
+  transform: translateY(-7px);
+  box-shadow: 0px 12px 30px 0px rgba(0, 0, 0, 0.2);
 }
 
 .service-card .card-icon {
@@ -359,6 +363,7 @@ h3 {
   margin-block-end: 25px;
   width: 100%;
   max-width: 100%;
+  height: 100vh;
 }
 
 .about .section-text,
@@ -455,7 +460,7 @@ footer {
   text-align: left;
   font: bold 16px sans-serif;
   padding: 50px 50px 60px 50px;
-  margin-top: 80px;
+  /* margin-top: 80px; */
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -635,7 +640,7 @@ footer {
   box-shadow: 0 6px 24px hsla(0, 0%, 0%, 0.05);
 }
 
-.input-field {
+.contact-form .input-field {
   background-color: hsl(0, 14%, 98%);
   color: hsl(240, 6%, 10%);
   font-size: 1.4rem;
@@ -646,19 +651,19 @@ footer {
   margin-block-end: 15px;
 }
 
-.input-field::-webkit-inner-spin-button {
+.contact-form .input-field::-webkit-inner-spin-button {
   display: none;
 }
 
-.input-field:focus {
+.contact-form .input-field:focus {
   outline-color: hsl(341, 100%, 49%);
 }
 
-.input-field::placeholder {
+.contact-form .input-field::placeholder {
   transition: 0.25s ease;
 }
 
-.input-field:focus::placeholder {
+.contact-form .input-field:focus::placeholder {
   opacity: 0;
 }
 
@@ -702,7 +707,7 @@ textarea.input-field {
   position: fixed;
   bottom: 10px;
   right: 20px;
-  background-color: hsla(0, 0%, 0%, 0.1);
+  background-color: magenta;
   color: #fff;
   padding: 12px;
   border-radius: 50%;
@@ -715,7 +720,7 @@ textarea.input-field {
 
 .back-top-btn.active {
   opacity: 1;
-  visibility: visisble;
+  visibility: visible;
   transform: translateY(-10px);
 }
 
@@ -728,9 +733,10 @@ textarea.input-field {
 
 @media (min-width: 575px) {
   .container {
-    max-width: 540px;
+    max-width: Calc(100vw - 70px);
     width: 100%;
-    margin-inline: auto;
+    margin-inline-end: auto;
+    margin-inline-start: auto;
   }
 
   .grid-list {
@@ -746,12 +752,13 @@ textarea.input-field {
 
 @media (min-width: 768px) {
   .container {
-    max-width: 720px;
+    max-width: Calc(100vw - 70px);
   }
 
   .section-text {
     max-width: 65ch;
-    margin-inline: auto;
+    margin-inline-start: auto;
+    margin-inline-end: auto;
   }
 
   .hero-text {
@@ -783,7 +790,7 @@ textarea.input-field {
   }
 
   .container {
-    max-width: 960px;
+    max-width: calc(100vw - 100px);
   }
 
   .grid-list {
@@ -839,12 +846,18 @@ textarea.input-field {
   }
 
   .hero-content {
-    margin-block-end: 0;
+    margin-block-end: 120px;
+  }
+
+  .hero-title {
+    font-size: 4rem;
   }
 
   .hero-subtitle {
     position: relative;
     padding-inline-start: 15px;
+    font-size: 1.9rem;
+    border-left: 2px solid red;
   }
 
   .hero-subtitle::before {
@@ -857,9 +870,14 @@ textarea.input-field {
     background-color: var(--red-crayola);
   }
 
+  .hero-text {
+    font-size: 1.9rem;
+  }
+
   .hero-text,
   .hero .btn {
-    margin-inline: 0;
+    margin-inline-end: 0;
+    margin-inline-start: 0;
   }
 
   .header .btn {
@@ -883,4 +901,267 @@ textarea.input-field {
   .about-banner {
     margin-block-end: 0;
   }
+}
+
+/* loging page css */
+
+.container-2 {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  background-color: #fff;
+  overflow: hidden;
+}
+
+.container-2::before {
+  content: "";
+  position: absolute;
+  width: 2000px;
+  height: 2000px;
+  border-radius: 50%;
+  background: linear-gradient(-45deg, #4481eb, #84befe);
+  top: -10%;
+  right: 48%;
+  transform: translateY(-50%);
+  z-index: 6;
+  transition: 1.5s ease-in-out;
+}
+
+.forms-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.signin-signup {
+  position: absolute;
+  top: 50%;
+  left: 75%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  display: grid;
+  grid-template-columns: 1fr;
+  z-index: 5;
+  transition: 1s 0.7s ease-in-out;
+}
+
+.container-2 form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0rem 5rem;
+  overflow: hidden;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  transition: 0.2s 0.7s ease-in-out;
+}
+
+.container-2 .forms-container form.sign-in-form {
+  z-index: 2;
+}
+
+.container-2 .forms-container form.sign-up-form {
+  opacity: 0;
+  z-index: 1;
+}
+.container-2 .forms-container form .title {
+  font-size: 2.2rem;
+  color: #444;
+  margin-bottom: 10px;
+}
+
+.container-2 .forms-container form .input-field {
+  max-width: 388px;
+  width: 100%;
+  height: 55px;
+  background-color: #f0f0f0;
+  margin: 10px 0;
+  border-radius: 55px;
+  display: grid;
+  grid-template-columns: 15% 85%;
+  padding: 0.4rem;
+  /* position: relative; */
+}
+
+.container-2 .forms-container form .input-field i {
+  text-align: center;
+  line-height: 55px;
+  color: #acacac;
+  font-size: 2rem;
+}
+
+.container-2 .forms-container form .input-field input {
+  background: none;
+  outline: none;
+  border: none;
+  line-height: 1;
+  font-weight: 500;
+  font-size: 1.6rem;
+  color: #333;
+}
+
+.container-2 .forms-container form .input-field input::placeholder {
+  color: #aaa;
+  font-weight: 500;
+}
+
+.container-2 .btn {
+  width: 150px;
+  height: 49px;
+  border: none;
+  outline: none;
+  border-radius: 49px;
+  cursor: pointer;
+  background-color: #5995fd;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 500;
+  margin: 10px 0;
+  transition: 0.5s;
+}
+
+.container-2 .btn:hover {
+  background-color: magenta;
+}
+
+.forms-container .social-text {
+  padding: 0.7rem;
+  font-size: 1.5rem;
+}
+
+.forms-container .social-media {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.forms-container .social-media i {
+  height: 46px;
+  width: 46px;
+  border: 1px solid #333;
+  margin: 0 0.45rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: #333;
+  font-size: 2.7rem;
+  border-radius: 50%;
+  transition: 0.3s ease-in;
+}
+
+.forms-container .social-media i:hover {
+  color: #4481eb;
+  border-color: #4481eb;
+}
+
+.panels-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.panels-container .panel {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-around;
+  text-align: center;
+  z-index: 6;
+}
+
+.panels-container .left-panel {
+  pointer-events: all;
+  padding: 3rem 17% 2rem 12%;
+}
+
+.panels-container .right-panel {
+  pointer-events: none;
+  padding: 3rem 12% 2rem 17%;
+}
+
+.panels-container .panel .content {
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: 0.9s 0.6s ease-in-out;
+}
+
+.panels-container .panel h3 {
+  font-weight: 600;
+  line-height: 1.8;
+  font-size: 2.1rem;
+  color: #fff;
+}
+
+.panels-container .panel p {
+  font-size: 1.3;
+  padding: 0.7rem 0;
+}
+
+.panels-container .panel .transparent {
+  margin: 0;
+  background: none;
+  border: 2px solid #fff;
+  width: 130px;
+  height: 41px;
+  font-weight: 600;
+  font-size: 1rem;
+}
+
+.panels-container .image {
+  width: 100%;
+  transition: 1.1s 0.4s ease-in-out;
+}
+
+.right-panel .image,
+.right-panel .content {
+  transform: translateX(800px);
+}
+
+/* ANIMATION FOR SIGN IN SIGN UP PAGE */
+.container-2.sign-up-mode::before {
+  transform: translate(100%, -50%);
+  right: 52%;
+}
+
+.container-2.sign-up-mode .left-panel .image,
+.container-2.sign-up-mode .left-panel .content {
+  transform: translateX(-800px);
+}
+
+.container-2.sign-up-mode .right-panel .image,
+.container-2.sign-up-mode .right-panel .content {
+  transform: translateX(0%);
+}
+
+.container-2.sign-up-mode .left-panel {
+  pointer-events: none;
+}
+
+.container-2.sign-up-mode .right-panel {
+  pointer-events: all;
+}
+
+.container-2.sign-up-mode .signin-signup {
+  left: 25%;
+}
+
+.container-2.sign-up-mode form.sign-in-form {
+  z-index: 1;
+  opacity: 0;
+}
+
+.container-2.sign-up-mode form.sign-up-form {
+  z-index: 2;
+  opacity: 1;
 }
