--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1074,8 +1074,8 @@ textarea.input-field {
 }
 
 .forms-container .social-media i:hover {
-  color: var(--rihno);
-  border-color: var(--rihno);
+  color: var(--ship-cove);
+  border-color: var(--ship-cove);
 }
 
 .panels-container {
@@ -1118,7 +1118,7 @@ textarea.input-field {
 
 .panels-container .panel h3 {
   font-weight: 600;
-  line-height: 1.8;
+  line-height: 1.4;
   font-size: 2.1rem;
   color: #fff;
 }
@@ -1141,6 +1141,7 @@ textarea.input-field {
 .panels-container .image {
   width: 100%;
   transition: 1.1s 0.4s ease-in-out;
+  margin-top: 10px;
 }
 
 .right-panel .image,
@@ -1205,7 +1206,7 @@ textarea.input-field {
 
   .signin-signup {
     width: 100%;
-    top: 95%;
+    top: 85%;
     transform: translate(-50%, -100%);
     transition: 1s 0.8s ease-in-out;
   }
@@ -1240,18 +1241,18 @@ textarea.input-field {
   }
 
   .panel h3 {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
 
   .panel p {
-    font-size: 0.7rem;
+    font-size: 1.3rem;
     padding: 0.5rem 0;
   }
 
   .btn.transparent {
     width: 110px;
     height: 35px;
-    font-size: 0.7rem;
+    font-size: 1.3rem;
   }
 
   .left-panel {
@@ -1316,4 +1317,118 @@ textarea.input-field {
     bottom: 28%;
     left: 50%;
   }
+}
+
+/* Dashboard styling */
+
+#dashboard-body {
+  background-color: white;
+  color: rgb(70, 71, 81);
+}
+
+#dashboard-body .material-icons-outlined {
+  vertical-align: middle;
+  line-height: 1px;
+  font-size: 30px;
+}
+
+#dashboard-body .grid-container {
+  display: grid;
+  grid-template-columns: 260px 1fr 1fr 1fr;
+  grid-template-rows: 0.2fr 3fr;
+  grid-template-areas:
+    "sidebar header header header"
+    "sidebar main main main";
+  height: 100vh;
+}
+
+#dashboard-body .dashboard-header {
+  grid-area: header;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 30px;
+  box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+}
+
+#dashboard-body .dashboard-header .header-right {
+  cursor: pointer;
+}
+
+#dashboard-body .dashboard-header .menu-icon {
+  display: none;
+}
+
+#dashboard-body .icon {
+  cursor: pointer;
+}
+
+#dashboard-body #sidebar {
+  grid-area: sidebar;
+  height: 100%;
+  background-color: var(--rihno);
+  color: rgb(255, 255, 255);
+  overflow-y: auto;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+}
+
+#dashboard-body #sidebar .sidebar-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 20px 20px 20px;
+  /* margin-bottom: 30px; */
+  /* background-color: #fff; */
+  border-bottom: 0.7px solid white;
+  box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+}
+
+#dashboard-body #sidebar .sidebar-title > span {
+  display: none;
+}
+
+#dashboard-body #sidebar .sidebar-brand {
+  margin: auto;
+}
+
+#dashboard-body #sidebar .sidebar-brand .w-logo {
+  height: 50px;
+}
+
+#dashboard-body #sidebar .sidebar-brand > .material-icons-outlined {
+  font-size: 50px;
+}
+
+#dashboard-body #sidebar .sidebar-list {
+  padding: 0;
+  margin-top: 15px;
+  list-style-type: none;
+}
+
+#dashboard-body #sidebar .sidebar-list-item {
+  padding: 20px;
+  font-size: 18px;
+}
+
+#dashboard-body #sidebar .sidebar-list-item:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  cursor: pointer;
+}
+
+#dashboard-body #sidebar .sidebar-list-item > a {
+  text-decoration: none;
+  color: #fff;
+}
+
+#dashboard-body #sidebar .sidebar-responsive {
+  display: inline !important;
+  position: absolute;
+}
+
+#dashboard-body .main-container {
+  grid-area: main;
+  overflow-y: auto;
+  padding: 20px;
 }
